--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,7 +3,7 @@
     --main-line-height: 30px;
 
     --title-header-size: 2em;
-    --section-padding-inline: 25px;
+    --section-padding-inline: 20px;
 
     --main-color:rgb(207 63 63); //rgb(63,125,207);// rgb(200 107 107);
 
